# PROGRAMACION-2

PRO2/: lista.c  lista.h
PRO2/1ºvez/: TGRarboles.pas  Teoria1PRO.pas
PRO2/1ºvez/PROYECTO1/: DynamicList.pas  StaticList.pas  TestUnit.pas  main.pas
PRO2/1ºvez/TEMA4/: priorityqueue_example.png.url
PRO2/1ºvez/entregapro/: CenterList.pas  CenterList.ppu  Manager.pas  Manager.ppu  PartyList.pas  PartyList.ppu  RequestQueue.pas  RequestQueue.ppu  SharedTypes.pas  SharedTypes.ppu  main  main.pas  script.sh  vote.txt
PRO2/1ºvez/entregapro/script_minimos/: create.txt  create_output.txt  create_ref.txt  new.txt  new_output.txt  new_ref.txt  remove.txt  remove_output.txt  remove_ref.txt  vote_output.txt  vote_ref.txt
PRO2/2020/: Practica1.pages
PRO2/2020/P1/: dynamic_list.c  dynamic_list.h  main.c  static_list.c  static_list.h
PRO2/2020/P2/: CMakeLists.txt  center_list.c  center_list.h  config.cmake  main.c  party_list.c  party_list.h
